--- a/Deploiement_de_machine/docker-compose.yml
+++ b/Deploiement_de_machine/docker-compose.yml
@@ -1,28 +1,19 @@
 version: '3.8'
 
 services:
-  # Serveur DNS
+  # Serveur DNS    
   dns:
     container_name: dns
-
-    image: technitium/dns-server:latest
+    image: abilioesteves/bind9:0.0.3
+    volumes:
+        - data:/keys  # Utilisation du volume nommé "data"
+    ports:
+      - "53:53/udp"
+      - "53:53/tcp"
+      - "10000:10000/tcp"
     networks:
       internal_net:
         ipv4_address: 192.168.0.3
-    ports:
-      - "5380:5380/tcp"  # DNS web console (HTTP)
-      - "53:53/udp"      # DNS service (UDP)
-      - "53:53/tcp"      # DNS service (TCP)
-    environment:
-      - DNS_SERVER_DOMAIN=dns-server
-      # Vous pouvez configurer d'autres variables d'environnement si nécessaire
-    volumes:
-      - config:/etc/dns  # Montée du volume pour la persistance des données de configuration
-    restart: unless-stopped
-    sysctls:
-      - net.ipv4.ip_local_port_range=1024 65000
-    
-
     
   # Active Directory avec Samba
   samba:
@@ -35,10 +26,9 @@ services:
       - ./smb:/data
       - ./downloads:/downloads
     environment:
-      - "TZ=$TIMEZONE"
+      - "TZ=${TIMEZONE}"  # Définition de la variable TIMEZONE
       - "SAMBA_LOG_LEVEL=0"
     restart: always
-
 
   ldap_cli:
     image: dnknth/ldap-ui
@@ -72,7 +62,6 @@ services:
     restart: always
 
   # Serveur VPN OpenVPN
-
   openvpn-as:
     image: openvpn/openvpn-as
     container_name: openvpn-as
@@ -88,7 +77,6 @@ services:
     volumes:
       - ~/docker/openvpn-as:/openvpn # Volume pour la persistance des données
     restart: always
-
 
   # Pare-feu OPNsense
   opnsense:
@@ -124,3 +112,6 @@ networks:
     ipam:
       config:
         - subnet: 192.168.0.0/24
+
+volumes:
+  data:  # Déclaration du volume nommé "data"
