--- a/Deploiement_de_machine/docker-compose.yml
+++ b/Deploiement_de_machine/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     volumes:
         - data:/keys  # Utilisation du volume nommé "data"
     ports:
-      - "53:53/udp"
+      - "5443:5443/udp"
+      - "5553:5553/tcp"
       - "10000:10000/tcp"
     networks:
       internal_net:
