--- a/Dockerfile/homeassistant/Dockerfile
+++ b/Dockerfile/homeassistant/Dockerfile
@@ -1,18 +1,14 @@
-# Utiliser l'image de base de Home Assistant
 FROM homeassistant/home-assistant:stable
 
 # Installer SSH
-RUN apt-get update && \
-    apt-get install -y openssh-server && \
-    # Activer les connexions SSH root
-    sed -i 's/^#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
-    # Créer un répertoire pour les clés SSH
-    mkdir -p /var/run/sshd && \
-    # Démarrer le service SSH
-    service ssh start
+RUN apt-get update && apt-get install -y openssh-server
 
-# Exposer les ports nécessaires
-EXPOSE 8123/tcp
+# Créer le répertoire pour SSH
+RUN mkdir /var/run/sshd
 
-# Commande de démarrage de Home Assistant
-CMD ["/usr/bin/python3", "-m", "homeassistant"]
+# Activer la connexion root et l'authentification par mot de passe
+RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config
+RUN echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
+
+# Démarrer SSH
+CMD ["/usr/sbin/sshd", "-D"]
