--- a/Deploiement_de_machine/inventaire.ini
+++ b/Deploiement_de_machine/inventaire.ini
@@ -1,25 +1,20 @@
 [dns]
-192.168.0.2
+192.168.0.2 ansible_ssh_user=root ansible_ssh_pass=root
 
 [ad]
-192.168.0.3
+192.168.0.3 ansible_ssh_user=root ansible_ssh_pass=root
 
 [ldap]
-192.168.0.4
+192.168.0.4 ansible_ssh_user=root ansible_ssh_pass=root
 
 [home_assistant]
-192.168.0.5
+192.168.0.5 ansible_ssh_user=root ansible_ssh_pass=root
 
 [openvpn]
-192.168.0.6
+192.168.0.6 ansible_ssh_user=root ansible_ssh_pass=root
 
 [opnsense]
-192.168.0.7
+192.168.0.7 ansible_ssh_user=root ansible_ssh_pass=root
 
 [client]
-192.168.0.8
-
-[all:vars]
-ansible_connection=ssh
-ansible_user=root
-ansible_ssh_pass=root
+192.168.0.8 ansible_ssh_user=root ansible_ssh_pass=root
