--- a/Deploiement_de_machine/inventaire.ini
+++ b/Deploiement_de_machine/inventaire.ini
@@ -1,20 +1,24 @@
 [dns]
-192.168.0.2 ansible_ssh_user=root ansible_ssh_pass=root
+192.168.0.2
 
 [ad]
-192.168.0.3 ansible_ssh_user=root ansible_ssh_pass=root
+192.168.0.3
 
 [ldap]
-192.168.0.4 ansible_ssh_user=root ansible_ssh_pass=root
+192.168.0.4
 
 [home_assistant]
-192.168.0.5 ansible_ssh_user=root ansible_ssh_pass=root
+192.168.0.5
 
 [openvpn]
-192.168.0.6 ansible_ssh_user=root ansible_ssh_pass=root
+192.168.0.6
 
 [opnsense]
-192.168.0.7 ansible_ssh_user=root ansible_ssh_pass=root
+192.168.0.7
 
 [client]
-192.168.0.8 ansible_ssh_user=root ansible_ssh_pass=root
+192.168.0.8
+
+[all:vars]
+ansible_ssh_user=root
+ansible_ssh_pass=root
