--- a/Deploiement_de_machine/docker-compose.yml
+++ b/Deploiement_de_machine/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         ipv4_address: 192.168.0.2
 
   # Active Directory avec Samba
-  samba:
+  ad:
     build:
       context: /home/toine-fa/SAE5.02/Dockerfile/samba
     image: crazymax/samba
@@ -37,7 +37,7 @@ services:
     ports:
       - "2223:22"  # Port SSH exposé sur l'hôte (port 2223 pour ce service)
 
-  ldap_cli:
+  ldap:
     build:
       context: /home/toine-fa/SAE5.02/Dockerfile/ldap_cli
     image: dnknth/ldap-ui
@@ -56,7 +56,7 @@ services:
       - ./config/ldap:/bitnami/openldap
     restart: always
 
-  homeassistant:
+  home_assistant:
     build:
       context: /home/toine-fa/SAE5.02/Dockerfile/homeassistant
     image: homeassistant/home-assistant:stable
@@ -75,7 +75,7 @@ services:
     restart: always
 
   # Serveur VPN OpenVPN
-  openvpn-as:
+  openvpn:
     build:
       context: /home/toine-fa/SAE5.02/Dockerfile/openvpn-as
     image: openvpn/openvpn-as
